fixed design bugs, added pages resource to update in active admin

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="span4">
       <!-- About -->
       <div class="headline"><h3><%= t('footer.about') %></h3></div>
-      <p class="margin-bottom-25">Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals.</p>
+      <p class="margin-bottom-25">NCCM GRUP - <%= t('main_page.moto') %>.</p>
 
       <!-- Monthly Newsletter -->
 <!--       <div class="headline"><h3>Monthly Newsletter</h3></div>
