--- a/app/views/welcome/optic_fibers.html.erb
+++ b/app/views/welcome/optic_fibers.html.erb
@@ -13,65 +13,11 @@
     <!-- Left Sidebar -->
     <div class="span9">
       <div class="blog margin-bottom-30">
-        <h3>Волоконно-оптические линии связи</h3>
-<!--         <ul class="unstyled inline blog-info">
-          <li><i class="icon-calendar"></i> February 02, 2013</li>
-          <li><i class="icon-pencil"></i> Diana Anderson</li>
-          <li><i class="icon-comments"></i> <a href="#">24 Comments</a></li>
-        </ul> -->
-<!--         <ul class="unstyled inline blog-tags">
-          <li>
-            <i class="icon-tags"></i>
-            <a href="#">Technology</a>
-            <a href="#">Education</a>
-            <a href="#">Internet</a>
-            <a href="#">Media</a>
-          </li>
-        </ul> -->
-        <div class="blog-img">
-          <!-- <img src="assets/img/posts/1.jpg" alt="" /> -->
-          <center><%= image_tag('drill_tech.jpg') %></center>
-        </div>
-        <div class="cont2">
-
-          <p style="text-align: justify; line-height: normal; ">Волоконно-оптические линии связи (ВОЛС) являются видом связи, при котором вся информация пересылается по диэлектрическим оптическим волноводам, именуемым как "оптическое волокно". На сегодняшний день данное волокно является наиболее эффективной физической средой для непосредственной передачи данных, а также наиболее развивающейся средой для передачи значительных объемов информации на большие расстояния.</p>
-
-          <p style="text-align: justify; line-height: normal; ">Располагая немалым опытом, требуемой технической и материальной базой, а также квалифицированными кадрами мы готовы построить волоконно-оптические линии связи различного назначения (технологические, распределительные, магистральные линии связи) в любом регионе РФ, применяя традиционные и новейшие технологии прокладки кабеля:</p>
-
-          <ol>
-            <li>Строительство кабельной канализации связи с последующей прокладкой кабеля;</li>
-
-            <li>Прокладка кабеля в существующей кабельной канализации связи;</li>
-
-            <li>Строительство лотковой кабельной канализации;</li>
-
-            <li>Прокладка кабеля в грунт в траншее;</li>
-
-            <li>Прокладка кабеля с помощью механизированной колонны (кабелеукладчик);</li>
-
-            <li>Прокладка кабеля бестраншейным способом методом горизонтального направленного бурения (ГНБ);</li>
-
-            <li>Подвес кабеля на опоре (воздушные линии связи).</li>
-          </ol>
-
-          <p style="text-align: justify; line-height: normal; ">В строительстве используется комплексный подход, в связи с этим мы имеем все необходимое, чтобы произвести следующие виды работ:</p>
-
-          <ol>
-            <li>Проверка ВОЛС и измерение технических параметров;</li>
-
-            <li>Входной контроль при прокладке оптического кабеля;</li>
-
-            <li>Установка волоконных и оптических кроссов и муфт;</li>
-
-            <li>Оптическая сварка в оптических кроссах и муфтах;</li>
-
-            <li>Установка кабельных колодцев;</li>
-
-            <li>Система контроля за качеством при строительстве.</li>
-          </ol>
-
-          <p>Строительство линий связи отличается массой сложностей и нюансов. Кроме того, прокладка ВОЛС не возможна без специальной техники и оборудования. В нашей компании для проведения таких работ имеется вся необходимая техника, именно поэтому нам удается сделать все качественно, профессионально и в срок. И если вам требуется строительство ВОЛС, то обязательно доверьте эту работу нашим специалистам, можете быть уверены: вы останетесь довольны результатом.</p>
-        </div>
+        <% if @page.display? %>
+          <%= sanitize raw(@page.content_for_locale(current_language)) %>
+        <% else %>
+          <%= render '/welcome/under_construction' %>
+        <% end %>
       </div><!--/blog-->
 
       <hr />
