--- a/app/views/welcome/technology.html.erb
+++ b/app/views/welcome/technology.html.erb
@@ -13,84 +13,11 @@
     <!-- Left Sidebar -->
     <div class="span9">
       <div class="blog margin-bottom-30">
-        <h3>Горизонтальное направленное бурение (ГНБ)</h3>
-<!--         <ul class="unstyled inline blog-info">
-          <li><i class="icon-calendar"></i> February 02, 2013</li>
-          <li><i class="icon-pencil"></i> Diana Anderson</li>
-          <li><i class="icon-comments"></i> <a href="#">24 Comments</a></li>
-        </ul> -->
-<!--         <ul class="unstyled inline blog-tags">
-          <li>
-            <i class="icon-tags"></i>
-            <a href="#">Technology</a>
-            <a href="#">Education</a>
-            <a href="#">Internet</a>
-            <a href="#">Media</a>
-          </li>
-        </ul> -->
-        <div class="blog-img">
-          <!-- <img src="assets/img/posts/1.jpg" alt="" /> -->
-          <center><%= image_tag('drill_tech.jpg') %></center>
-        </div>
-<div class="cont2">
-
-<p><strong>Горизонтальное направленное бурение</strong> (ГНБ) – это бестраншейный способ строительства наружных инженерных сетей и коммуникаций. Горизонтальное бурение осуществляется при помощи буровых установок, которые в свою очередь подразделяются на классы в зависимости от мощности. При бурении горизонтальных скважин используют установки ГНБ четырёх основных классов: MINI, MIDI, MAXI и MEGA. При бестраншейной прокладке трубопроводов обычно используют трубы из полиэтилена (ПНД) и стали, но возможно использование специализированных труб, например полимерные трубы для теплопроводных сетей. Технология прокладки трубопроводов методом наклонно-направленного бурения позволяет укладывать коммуникации диаметром до 1200 мм на расстояние до нескольких километров.</p>
-
-<p>ГНБ в Петербурге в настоящее время используется повсеместно, ниже представлены основные возможности бестраншейной прокладки коммуникаций и области ее применения. Особенную популярность ГНБ приобрело в конце 2006 года. </p>
-
-<p>Цена на ГНБ зависит от множества факторов: общего объема работ, характеристики грунта, диаметра коммуникации. Под стоимостью ГНБ обычно принято понимать цену за 1 метр бестраншейной прокладки коммуникации.&nbsp; Цена на бурение может меняться в зависимости от сложности объекта, например при строительстве самотечной канализации. <strong>ГНБ бурение</strong> это сложный технологический процесс, и цена на него оправдана использованием дорогостоящих установок ГНБ, высокополимеризованных буровых растворов и высокой заработной платой инженерно-технического и рабочего персонала в связи с тяжелыми условиями труда.&nbsp;&nbsp; </p>
-
-<p>Работа по горизонтальному направленному бурению разделяется на три основных этапа:</p>
-
-<ol>
-  <li>Бурение пилотной скважины (бурение горизонтальной скважины); </li>
-
-  <li>Предварительное расширение скважины (последовательное бурение скважины до нужного диаметра)</li>
-
-  <li>Протягивание трубопровода (бестраншейная прокладка коммуникации или бестраншейная прокладка трубопровода).</li>
- </ol>
-
-<h2>Этапы&nbsp; строительства методом ГНБ бурения.</h2>
-
-<h3>Первый этап.</h3>
-
-<p>В ходе работ по бестраншейной прокладки наружных инженерных сетей и коммуникаций методом горизонтального направленного бурения (ГНБ) строительство пилотной скважины является одним из самых ответственных и значимых этапов строительства. От качественно пробуренной горизонтальной скважины зависит весь дальнейший ход работ. Бурение пилотной скважины осуществляется при помощи буровой головки с закреплённой на ней буровой лопаткой и зонда-излучателя помещённого во внутрь буровой головки. В передней части буровой головки имеются отверстия для выхода бурового раствора, который технологически необходим при наклонно-направленном бурении и служит для охлаждения бурового инструмента и зонда-излучателя, снижения силы трения на буровую колонне, а также для размыва грунта в скважине и его последующего вывода из скважины. Зонд-излучатель необходим для слежения над местоположением буровой головки под землёй и её наклоном. Буровая лопатка имеет скос, который необходим для управления буровой колонной в земле, эта возможность позволяет построить буровую скважины в обход препятствий и уже существующих наружных инженерных сетей и коммуникаций. Оператор ГНБ, который находится на земле получает информацию о положении буровой головки в режиме реального времени и постоянно контролирует ход бурения, что позволяет закончить горизонтально-направленное бурение в заданной проектом точке. </p>
-
-<h3>Второй этап.</h3>
-
-<p>К этапу предварительного расширения скважины приступают сразу же после построения пилотной скважин. Расширение скважины (бурение) происходит при помощи буровых расширителей, которые устанавливаются на буровую плеть взамен буровой головки.&nbsp; Далее установка ГНБ с буровым расширителем на конце тянет и вращает (бурит) буровую плеть на себя, таким образом происходит расширение скважины. Скважина расширяется до тех пор пока ее диаметр не будет превышать диаметра протягиваемого трубопровода на 30%, иногда необходимо производить несколько последовательных проходов расширителя по скважине до достижения необходимого диаметра скважины.</p>
-
-<h3>Третий этап.</h3>
-
-<p>Бестраншейная прокладка трубопровода происходит после расширения буровой скважины до необходимого диаметра. На стороне выхода буровой головки, за буровую плеть и расширитель цепляется трубопровод с вертлюгом. Вертлюг в ГНБ бурении используется для предотвращения вращения трубопровода в буровой скважине. Далее установка ГНБ тянет на себя буровую плеть с трубопроводом. </p>
-
-<h2>Производственно-технический аспект ГНБ:</h2>
-
-<p>Возможность санации, бестраншейного строительства и ремонта подземных коммуникаций в сложных условиях:</p>
-
-<ul>
-  <li>в экстремальных грунтах, например, плывунах и скальных породах;</li>
-<li>при условии высокой плотности жилых построек, а также прохождении трассы под трамвайными путями, действующими железными дорогами и автомагистралями, взлетно-посадочными полосами, парковыми зонами, скверами и прочими инфраструктурными сооружениями;</li>
-<li>под водоемами (озерами и реками), сельскохозяйственными объектами, оврагами, в участках прохождения магистральных нефте-, газо и продуктопроводов, а также высоковольтных ЛЭП;</li>
-<li>на территории заводов, комбинатов и прочих промышленных предприятий (ввод новых коммуникаций в производственные цеха возможен даже при условии невозможности остановки производства).</li>
- </ul>
-
-<h2>Социально-экологические нюансы ГНБ:</h2>
-
-<ul>
-  <li>негативное влияние на условия проживания людей, находящихся в зоне проведения работ, полностью минимизировано;</li>
-<li>полное сохранение природного ландшафта на участке проведения работ, а также исключение пагубного техногенного влияния на флору и фауну.</li>
- </ul>
-
-<h2>Финансово-экономические нюансы ГНБ:</h2>
-
-<ul>
-  <li>прокладка труб методом ГНБ, благодаря экономичности используемых буровых комплексов и их полной автономности, обеспечивает минимизацию издержек на их содержание;</li>
-<li>значительно снижение затрат на эксплуатационное обслуживание и ремонт трубопроводов;</li>
-<li>снижение сметной стоимости возведения трубопроводов, благодаря значительному сокращению времени проведения работ, а также издержек на привлечение тяжелой землеройной спецтехники и дополнительной рабочей силы;</li>
-<li>отсутствие каких-либо издержек на восстановление участков автомагистралей, зеленых насаждений, жилых объектов и т.д., благодаря возможности прокладки труб в экстремальных условиях без необходимости разрушения существующих объектов инфраструктуры.</li>
- </ul>
-        </div>
+        <% if @page.display? %>
+          <%= sanitize raw(@page.content_for_locale(current_language)) %>
+        <% else %>
+          <%= render '/welcome/under_construction' %>
+        <% end %>
       </div><!--/blog-->
 
       <hr />
