--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -57,49 +57,7 @@ Index.initParallaxSlider();
   <!-- //End Service Blokcs -->
 
   <!-- Recent Works -->
-  <div class="headline"><h3><%= t('main_page.recent_tasks') %></h3></div>
-  <ul class="thumbnails">
-    <li class="span3">
-      <div class="thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden"><img src="assets/img/carousel/2.jpg" alt="" /></div>
-          <a class="btn-more hover-effect" href="#">detalii +</a>
-        </div>
-        <h3><a class="hover-effect" href="#">Soroca</a></h3>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-      </div>
-    </li>
-    <li class="span3">
-      <div class="thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden"><img src="assets/img/carousel/3.jpg" alt="" /></div>
-          <a class="btn-more hover-effect" href="#">detalii +</a>
-        </div>
-        <h3><a class="hover-effect" href="#">Florești</a></h3>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-      </div>
-    </li>
-    <li class="span3">
-      <div class="thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden"><img src="assets/img/carousel/9.jpg" alt="" /></div>
-          <a class="btn-more hover-effect" href="#">detalii +</a>
-        </div>
-        <h3><a class="hover-effect" href="#">Ungheni</a></h3>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-      </div>
-    </li>
-    <li class="span3">
-      <div class="thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden"><img src="assets/img/carousel/10.jpg" alt="" /></div>
-          <a class="btn-more hover-effect" href="#">detalii +</a>
-        </div>
-        <h3><a class="hover-effect" href="#">Chișinău</a></h3>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-      </div>
-    </li>
-  </ul><!--/thumbnails-->
+  <%#= render 'recent_works' %>
   <!-- //End Recent Works -->
 
   <!-- Information Blokcs -->
