--- a/app/views/layouts/_right_side.html.erb
+++ b/app/views/layouts/_right_side.html.erb
@@ -1,18 +1,25 @@
 <!-- Our Services -->
 <div class="who margin-bottom-30">
   <div class="headline"><h3><%= t('right_side.our_services') %></h3></div>
-  <p>At vero eos et accusamus et iusto odio dign issimos ducimus qui blanditiis iusto.</p>
+  <!-- <p>At vero eos et accusamus et iusto odio dign issimos ducimus qui blanditiis iusto.</p> -->
   <ul class="unstyled">
-    <li><a href="#"><i class="icon-chevron-sign-right"></i>Vivamus imperdiet condimentum</a></li>
-    <li><a href="#"><i class="icon-chevron-sign-right"></i>Anim pariatur cliche squid</a></li>
-    <li><a href="#"><i class="icon-chevron-sign-right"></i>Eget placerat felis consectetur</a></li>
-    <li><a href="#"><i class="icon-chevron-sign-right"></i>Condimentum diam eget placerat</a></li>
+    <% if Service.any? %>
+      <% Service.all.each do |serv| %>
+        <li>
+          <a href="#"><i class="icon-chevron-sign-right">
+            </i><%= serv.content_for_locale(current_language) %>
+          </a>
+        </li>
+      <% end %>
+    <% else %>
+      <li><a href="#"><i class="icon-chevron-sign-right"></i>Working on it...</a></li>
+    <% end %>
   </ul>
 </div>
 <!-- Contact Us -->
 <div class="who margin-bottom-30">
   <div class="headline"><h3><%= t('right_side.contacts') %></h3></div>
-  <p>Vero facilis est etenim a feugiat cupiditate non quos etrerum facilis.</p>
+  <!-- <p>Vero facilis est etenim a feugiat cupiditate non quos etrerum facilis.</p> -->
   <ul class="unstyled who margin-bottom-20">
     <li><a href="#"><i class="icon-home"></i><%= t('contacts.address') %></a></li>
     <li><a href="#"><i class="icon-envelope-alt"></i><%= mail_to "nccmgrup@gmail.com" %></a></li>
