added some more text/translations to the front page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,9 @@
     <%= msg %>
   </div>
 <% end %>
- <%= yield %>
+  <div style="min-height: 700px;">
+    <%= yield %>
+  </div>
 <!--=== Footer ===-->
 <div class="footer">
 <%= render 'layouts/footer' %>
